# movm-ui

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: tests.yml
public/: manifest.json
rust/: Cargo.toml
rust-bindings/: Cargo.toml
rust-bindings/src/: lib.rs
rust/src/: lib.rs
src/: rust.ts  setupTests.ts
src/components/: App.jsx  App.spec.jsx  Button.jsx  CodeEditor.jsx  Embed.jsx  LandingPage.jsx  Workspace.jsx
src/components/nodes/: Cont.jsx  Dec.jsx  Exp.jsx  Interruption.jsx  ListNode.tsx  Node.tsx  Unknown.jsx
src/components/utils/: CSSTransitionWrapper.tsx  ResponsiveSplitPane.jsx
src/config/: configureMonaco.ts  jsonTheme.ts
src/contexts/: selectionContext.ts
src/hooks/utils/: useTimeout.ts
src/styles/: index.scss
src/styles/partials/: splitPane.scss  transitions.scss
