[package]
name = "rust"
version = "0.1.0"
authors = ["Ryan Vandersmith <ryan.vandersmith@dfinity.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
js-sys = "^0.3"
lazy_static = "^1.4"
send_wrapper = "^0.6"
motoko = { path = "../../motoko.rs/crates/motoko" }

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
